Skal justere utfallet tilVurdering hvis tidligere avslått