@@ -6,6 +6,7 @@ import java.util.NavigableSet;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.TreeSet;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -67,7 +68,7 @@ public class PSBKompletthetSjekkerTjeneste {
 
 
     public KompletthetsAksjon utledTilstand(BehandlingReferanse ref, BehandlingskontrollKontekst kontekst) {
-        var perioderTilVurdering = beregningsgrunnlagVilkårTjeneste.utledPerioderTilVurdering(ref, true);
+        var perioderTilVurdering = beregningsgrunnlagVilkårTjeneste.utledPerioderTilVurdering(ref, true, false);
         var kompletthetsVurderinger = kompletthetsjekker.utledAlleManglendeVedleggForPerioder(ref);
 
         var inputUtenVurderinger = new VurdererInput(perioderTilVurdering, kompletthetsVurderinger);
@@ -75,11 +76,13 @@ public class PSBKompletthetSjekkerTjeneste {
 
         var grunnlag = beregningPerioderGrunnlagRepository.hentGrunnlag(ref.getBehandlingId());
         if (aksjon.kanFortsette()) {
+            settVilkårsPeriodeTilVurderingHvisTidligereVarAvslagOgTilVurderingNå(ref, perioderTilVurdering, grunnlag);
             deaktiverVurderingerSomIkkeErRelevantePgaNåKomplett(ref.getBehandlingId(), perioderTilVurdering, kompletthetsVurderinger, grunnlag);
 
             log.info("Behandlingen er komplett, kan fortsette.");
             return aksjon;
         }
+        settVilkårsPeriodeTilVurderingHvisTidligereVarAvslagOgTilVurderingNå(ref, perioderTilVurdering, grunnlag);
 
         var behandling = behandlingRepository.hentBehandling(ref.getBehandlingId());
 
@@ -125,6 +128,34 @@ public class PSBKompletthetSjekkerTjeneste {
         // Manuell avklaring
         log.info("Behandlingen er IKKE komplett, ber om manuell avklaring og avklaring om mulige avslag.");
         return KompletthetsAksjon.manuellAvklaring(AksjonspunktDefinisjon.ENDELIG_AVKLAR_KOMPLETT_NOK_FOR_BEREGNING);
+    }
+
+    private void settVilkårsPeriodeTilVurderingHvisTidligereVarAvslagOgTilVurderingNå(BehandlingReferanse ref,
+                                                                                      NavigableSet<DatoIntervallEntitet> perioderTilVurdering,
+                                                                                      Optional<BeregningsgrunnlagPerioderGrunnlag> grunnlag) {
+        if (perioderTilVurdering.isEmpty()) {
+            return;
+        }
+        var aktuellePerioderTilVurdering = perioderTilVurdering;
+        if (grunnlag.isPresent()) {
+            var relevanteSkjæringstidspunkterMedAvlsag = grunnlag.get().getKompletthetPerioder()
+                .stream()
+                .filter(it -> Vurdering.MANGLENDE_GRUNNLAG.equals(it.getVurdering()))
+                .map(KompletthetPeriode::getSkjæringstidspunkt)
+                .filter(skjæringstidspunkt -> perioderTilVurdering.stream().anyMatch(at -> Objects.equals(at.getFomDato(), skjæringstidspunkt)))
+                .collect(Collectors.toSet());
+
+            aktuellePerioderTilVurdering = perioderTilVurdering.stream()
+                .filter(it -> relevanteSkjæringstidspunkterMedAvlsag.stream()
+                    .noneMatch(skjæringstidspunkt -> Objects.equals(it.getFomDato(), skjæringstidspunkt)))
+                .collect(Collectors.toCollection(TreeSet::new));
+
+        }
+        if (aktuellePerioderTilVurdering.isEmpty()) {
+            return;
+        }
+        log.info("Justerer utfallet på perioder [{}] hvis tidligere avslått pga manglende grunnlag.", aktuellePerioderTilVurdering);
+        beregningsgrunnlagVilkårTjeneste.settVilkårutfallTilIkkeVurdertHvisTidligereAvslagPåKompletthet(ref.getBehandlingId(), aktuellePerioderTilVurdering);
     }
 
     private void deaktiverVurderingerSomIkkeErRelevantePgaNåKomplett(Long behandlingId, NavigableSet<DatoIntervallEntitet> perioderTilVurdering, Map<DatoIntervallEntitet, List<ManglendeVedlegg>> kompletthetsVurderinger, Optional<BeregningsgrunnlagPerioderGrunnlag> grunnlag) {
@@ -181,7 +212,7 @@ public class PSBKompletthetSjekkerTjeneste {
     private void avslå(KompletthetPeriode periode, NavigableSet<DatoIntervallEntitet> perioderTilVurdering, BehandlingskontrollKontekst kontekst) {
         var relevantPeriode = perioderTilVurdering.stream()
             .filter(it -> it.inkluderer(periode.getSkjæringstidspunkt()))
-            .collect(Collectors.toList());
+            .toList();
 
         if (relevantPeriode.size() > 1) {
             throw new IllegalStateException("Fant flere vilkårsperioder(" + relevantPeriode.size() + ") relevant for " + periode);
